# frostbite

./: .gitignore  BoostTestHelpers.cmake  CMakeLists.txt  README.md
CuttownTest/: Main.cpp  gameData.cpp  gameData.h  infoPanel.cpp  infoPanel.h  mainWindow.cpp  mainWindow.h
TestApp/: Main.cpp  ModelWindow.cpp  ModelWindow.h
buildscripts/: generate_vs2019_64.cmd  generate_vs2019_64_laptop.cmd
snowlib/: AnimData.cpp  AnimData.h  AnimDecoder.cpp  AnimDecoder.h  AnimationProcessor.cpp  AnimationProcessor.h  DataAccess.h  DataUtil.h  FntDecoder.cpp  FntDecoder.h  GIFTag.cpp  GIFTag.h  GameRegion.h  GameType.h  GobFile.cpp  GobFile.h  Helpers.cpp  Helpers.h  LmpFile.cpp  LmpFile.h  LmpRepository.cpp  LmpRepository.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  Model.h  Scene.h  TexDecoder.cpp  TexDecoder.h  Texture.h  VertexDefs.h  VertexWeight.h  VifDecoder.cpp  VifDecoder.h  World.cpp  World.h  WorldReader.cpp  WorldReader.h
snowlib_test/: LmpFileTest.cpp
